RESOLVED FIXED89272
Settings::devicePixelRatio doesn't do anything and is confusing
https://bugs.webkit.org/show_bug.cgi?id=89272
Summary Settings::devicePixelRatio doesn't do anything and is confusing
Adam Barth
Reported 2012-06-15 21:10:13 PDT
Settings::devicePixelRatio doesn't do anything and is confusing
Attachments
Patch (7.00 KB, patch)
2012-06-15 21:13 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-06-15 21:13:09 PDT
James Robinson
Comment 2 2012-06-15 22:06:32 PDT
Comment on attachment 147946 [details] Patch Out, vile jelly!
WebKit Review Bot
Comment 3 2012-06-16 15:35:59 PDT
Comment on attachment 147946 [details] Patch Clearing flags on attachment: 147946 Committed r120534: <http://trac.webkit.org/changeset/120534>
WebKit Review Bot
Comment 4 2012-06-16 15:36:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.