Settings::devicePixelRatio doesn't do anything and is confusing https://bugs.webkit.org/show_bug.cgi?id=89272

Reviewed by James Robinson.

Source/WebCore:

Settings::devicePixelRatio is yet another piece of state trying to
represent the device scale factor. The canonical place to store this
state is Page::m_deviceScaleFactor. Nothing in WebCore references
Settings::devicePixelRatio anymore, so we can remove it.

* page/Settings.cpp:
(WebCore::Settings::Settings):
* page/Settings.h:
(Settings):

Source/WebKit2:

* Shared/WebPreferencesStore.h:
(WebKit):
    - Remove boilerplate code for the setting.
* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewExperimental::devicePixelRatio):
(QQuickWebViewExperimental::setDevicePixelRatio):
    - Change these functions to get and set the real device scale factor.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::sendViewportAttributesChanged):
    - Use the real device scale factor for the viewport calculation.
(WebKit::WebPage::updatePreferences):
    - Remove boilerplate code for the setting.


Canonical link: https://commits.webkit.org/107146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120534 268f45cc-cd09-0410-ab3c-d52691b4dbfc